--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         android:theme="@style/Theme.SplashScreen"
         tools:targetApi="31">
         <activity
+            android:name=".PantallaEmpresario"
+            android:exported="false" />
+        <activity
             android:name=".DatosUsuario"
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
